2008-10-27  Esteban Sanchez  <estebans@artica.es>

	* godmode/db/db_purge.php, godmode/profiles/profile_list.php,
	godmode/reporting/map_builder.php, include/languages/*,
	include/functions.php, include/functions_db.php,
	operation/agentes/estado_agente.php,
	operation/agentes/estado_grupo.php, operation/agentes/ver_agente.php,
	operation/events/events.php, operation/servers/view_server.php,
	operation/snmpconsole/snmp_alert.php, operation/users/user.php,
	operation/visual_console/index.php,
	operation/visual_console/render_view.php, operation/menu.php: Merged
	from trunk to fix bugs and errors. No functionallity changes were
	done.

	* index.php, include/config_process.php: Updated build number.

2008-10-22  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	translation.

	* include/languages/index.pot: Updated po template file.

2008-10-22  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated po template file.

	* operation/messages/message.php, operation/servers/view_server.php,
	  general/logon_ok.php, godmode/admin_access_logs.php,
	  godmode/db/db_purge.php, godmode/agentes/manage_config.php,
	  godmode/agentes/planned_downtime.php,
	  godmode/agentes/manage_config_remote.php,
	  godmode/reporting/graph_builder.php,
	  godmode/servers/modificar_server.php: Updated translation
	  infrastructure.

2008-10-21  Jorge Gonzalez  <jorgegonz@artica.es>

	* operation/servers/view_server.php,
	  godmode/agentes/configurar_agente.php: Modified strings for better
	  translation.

	* include/languages/pt_BR.mo, include/languages/fr.po,
	  include/languages/uk.mo, include/languages/ro.mo,
	  include/languages/ca.po, include/languages/sv.po,
	  include/languages/de.po, include/languages/zh_TW.po,
	  include/languages/hi.po, include/languages/zh_CN.po,
	  include/languages/fr.mo, include/languages/te.po,